bc_reader logger settings read-write implemented

--- a/bc_reader/android/loggermanager/app/src/main/res/values-ru/strings.xml
+++ b/bc_reader/android/loggermanager/app/src/main/res/values-ru/strings.xml
@@ -4,7 +4,7 @@
     <string name="main_select_logger_label">Logger</string>
     <string name="main_no_logger_selected">&lt;Logger не выбран&gt;</string>
     <string name="main_logger_id_label">Logger ID</string>
-    <string name="main_scanpoint_label">Scanpoint ID</string>
+    <string name="main_scanpoint_label">Scanpoint №</string>
     <string name="main_pattern_label">Pattern</string>
     <string name="main_check_length_label">Check length</string>
     <string name="main_only_digits_label">Only digits</string>
@@ -17,5 +17,6 @@
     <string name="main_get_debug">Получить debug</string>
     <string name="main_get_log_line">Получить строку log</string>
     <string name="main_get_debug_line">Получить строку debug</string>
-    <string name="main_clear_device">Очистить все логи</string>
+    <string name="main_two_digits_error">Ошибка в числе из двух цифр: ${value}</string>
+    <string name="main_pattern_error">Ошибка в шаблоне штрих-кода: ${value}</string>
 </resources>
