--- a/bc_reader/android/loggermanager/app/src/main/res/values/strings.xml
+++ b/bc_reader/android/loggermanager/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="main_select_logger_label">Logger</string>
     <string name="main_no_logger_selected">&lt;No logger selected&gt;</string>
     <string name="main_logger_id_label">Logger ID</string>
-    <string name="main_scanpoint_label">Scanpoint ID</string>
+    <string name="main_scanpoint_label">Scanpoint #</string>
     <string name="main_pattern_label">Pattern</string>
     <string name="main_check_length_label">Check length</string>
     <string name="main_only_digits_label">Only digits</string>
@@ -18,4 +18,6 @@
     <string name="main_get_log_line">Get log line</string>
     <string name="main_get_debug_line">Get debug line</string>
     <string name="main_clear_device">Clear device</string>
+    <string name="main_two_digits_error">Two digits number wrong: ${value}</string>
+    <string name="main_pattern_error">Wrong pattern: ${value}</string>
 </resources>
