bc_reader logger auto time update

--- a/bc_reader/android/loggermanager/app/src/main/res/values-ru/strings.xml
+++ b/bc_reader/android/loggermanager/app/src/main/res/values-ru/strings.xml
@@ -3,6 +3,11 @@
 
     <string name="main_select_logger_label">Logger</string>
     <string name="main_no_logger_selected">&lt;Logger не выбран&gt;</string>
+
+    <string name="main_radio_settings">Settings</string>
+    <string name="main_radio_logs">Logs</string>
+    <string name="main_radio_auto_time">Auto time</string>
+
     <string name="main_logger_id_label">Logger ID</string>
     <string name="main_scanpoint_label">Scanpoint №</string>
     <string name="main_pattern_label">Pattern</string>
@@ -11,12 +16,17 @@
     <string name="main_time_label">Time</string>
     <string name="main_update_setting">&gt;</string>
     <string name="main_reload_settings">Обновить</string>
+
     <string name="main_select_save_dir">Директория сохранения</string>
     <string name="main_no_save_dir">Директория сохранения не выбрана</string>
     <string name="main_get_log">Получить log</string>
     <string name="main_get_debug">Получить debug</string>
     <string name="main_get_log_line">Получить строку log</string>
     <string name="main_get_debug_line">Получить строку debug</string>
+    <string name="main_clear_device">Очистить все логи</string>
+
+    <string name="main_auto_update_time">Авто-обновление времени</string>
+
     <string name="main_two_digits_error">Ошибка в числе из двух цифр: ${value}</string>
     <string name="main_pattern_error">Ошибка в шаблоне штрих-кода: ${value}</string>
     <string name="main_save_dir_error">Ошибка выбора директории: ${value}</string>
