--- a/bc_reader/android/loggermanager/app/src/main/res/values/strings.xml
+++ b/bc_reader/android/loggermanager/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
 
     <string name="main_select_logger_label">Logger</string>
     <string name="main_no_logger_selected">&lt;No logger selected&gt;</string>
+
+    <string name="main_radio_settings">Settings</string>
+    <string name="main_radio_logs">Logs</string>
+    <string name="main_radio_auto_time">Auto time</string>
+
     <string name="main_logger_id_label">Logger ID</string>
     <string name="main_scanpoint_label">Scanpoint #</string>
     <string name="main_pattern_label">Pattern</string>
@@ -11,13 +16,17 @@
     <string name="main_time_label">Time</string>
     <string name="main_update_setting">&gt;</string>
     <string name="main_reload_settings">Reload</string>
+
     <string name="main_select_save_dir">Select save dir</string>
     <string name="main_no_save_dir">Save dir not defined</string>
     <string name="main_get_log">Get log</string>
     <string name="main_get_debug">Get debug</string>
     <string name="main_get_log_line">Get log line</string>
     <string name="main_get_debug_line">Get debug line</string>
+
     <string name="main_clear_device">Clear device</string>
+    <string name="main_auto_update_time">Auto update time</string>
+
     <string name="main_two_digits_error">Two digits number wrong: ${value}</string>
     <string name="main_pattern_error">Wrong pattern: ${value}</string>
     <string name="main_save_dir_error">Wrong directory: ${value}</string>
