bc_reader logger auto time update select loggers

--- a/bc_reader/android/loggermanager/app/src/main/res/values-ru/strings.xml
+++ b/bc_reader/android/loggermanager/app/src/main/res/values-ru/strings.xml
@@ -26,6 +26,7 @@
     <string name="main_clear_device">Очистить все логи</string>
 
     <string name="main_auto_update_time">Авто-обновление времени</string>
+    <string name="main_update_period">Пероид обновления (мин)</string>
 
     <string name="main_two_digits_error">Ошибка в числе из двух цифр: ${value}</string>
     <string name="main_pattern_error">Ошибка в шаблоне штрих-кода: ${value}</string>
