--- a/bc_reader/android/loggermanager/app/src/main/res/values/strings.xml
+++ b/bc_reader/android/loggermanager/app/src/main/res/values/strings.xml
@@ -8,21 +8,21 @@
     <string name="main_radio_logs">Logs</string>
     <string name="main_radio_auto_time">Auto time</string>
 
-    <string name="main_logger_id_label">Logger ID</string>
-    <string name="main_scanpoint_label">Scanpoint #</string>
+    <string name="main_logger_id_label">LoggerID</string>
+    <string name="main_scanpoint_label">Point#</string>
     <string name="main_pattern_label">Pattern</string>
-    <string name="main_check_length_label">Check length</string>
-    <string name="main_only_digits_label">Only digits</string>
+    <string name="main_check_length_label">LenCheck</string>
+    <string name="main_only_digits_label">OnlyDigits</string>
     <string name="main_time_label">Time</string>
     <string name="main_update_setting">&gt;</string>
     <string name="main_reload_settings">Reload</string>
 
-    <string name="main_select_save_dir">Select save dir</string>
+    <string name="main_select_save_dir">Save dir</string>
     <string name="main_no_save_dir">Save dir not defined</string>
-    <string name="main_get_log">Get log</string>
-    <string name="main_get_debug">Get debug</string>
-    <string name="main_get_log_line">Get log line</string>
-    <string name="main_get_debug_line">Get debug line</string>
+    <string name="main_get_log">GETL</string>
+    <string name="main_get_debug">GETD</string>
+    <string name="main_get_log_line">GETL line</string>
+    <string name="main_get_debug_line">GETD line</string>
     <string name="main_clear_device">Clear device</string>
 
     <string name="main_auto_update_time">Auto update time</string>
