--- a/bc_reader/android/loggermanager/app/src/main/res/values/strings.xml
+++ b/bc_reader/android/loggermanager/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="main_radio_settings">Settings</string>
     <string name="main_radio_logs">Logs</string>
     <string name="main_radio_auto_time">Auto time</string>
+    <string name="main_radio_console">Console</string>
 
     <string name="main_logger_id_label">LoggerID</string>
     <string name="main_scanpoint_label">Point#</string>
