[#208] datacollector приступил к разработке

--- a/datacollector/datacollector_tablet/app/src/main/res/values/strings.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/values/strings.xml
@@ -91,6 +91,7 @@
 
     <string name="input_withdraw_no_team_number">333</string>
     <string name="input_withdraw_no_team">&lt;No team selected></string>
+    <string name="input_withdraw_scan_point">Withdraw point:</string>
     <string name="input_withdraw_member_column">Member</string>
     <string name="input_withdraw_withdraw_column">Withdraw</string>
     <string name="input_withdraw_no_result">&lt;Result undefined></string>
