--- a/datacollector/datacollector_tablet/app/src/main/res/values-ru/strings.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/values-ru/strings.xml
@@ -92,6 +92,7 @@
 
     <string name="input_withdraw_no_team_number">333</string>
     <string name="input_withdraw_no_team">&lt;Команда не выбрана></string>
+    <string name="input_withdraw_scan_point">Точка схода:</string>
     <string name="input_withdraw_member_column">Участник</string>
     <string name="input_withdraw_withdraw_column">Сошёл</string>
     <string name="input_withdraw_no_result">&lt;Результат не определён></string>
