--- a/datacollector/datacollector_tablet/app/src/main/res/values/strings.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/values/strings.xml
@@ -99,6 +99,7 @@
     <string name="input_withdraw_already_withdrawn">Already withdrawn</string>
     <string name="input_withdraw_res_members">Members to withdraw:</string>
     <string name="input_withdraw_res_no_members">&lt;Nobody selected></string>
+    <string name="input_withdraw_saving">Saving checked members.</string>
 
     <string name="file_dialog_location">Location</string>
     <string name="file_dialog_cant_read_folder">folder can\'t be read!</string>
