--- a/datacollector/datacollector_tablet/app/src/main/res/values/strings.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="main_search_team_on_point">Search team on point</string>
     <string name="main_settings">Settings</string>
     <string name="main_fill_data">Fill test data</string>
+    <string name="main_progress_loading">Loading...</string>
 
     <string name="settings_title">Settings</string>
     <string name="settings_path_to_db">DB file:</string>
