--- a/datacollector/datacollector_tablet/app/src/main/res/values-ru/strings.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/values-ru/strings.xml
@@ -91,7 +91,6 @@
     <string name="input_data_res_start_time">Время старта:</string>
     <string name="input_data_res_finish_time">Время финиша:</string>
     <string name="input_data_withdraw_member">Сход</string>
-    <string name="input_withdraw_saving">Сохранение отмеченных участников.</string>
 
     <string name="input_withdraw_no_team_number">333</string>
     <string name="input_withdraw_no_team">&lt;Команда не выбрана></string>
@@ -103,6 +102,9 @@
     <string name="input_withdraw_already_withdrawn">Уже отмечен</string>
     <string name="input_withdraw_res_members">Сошедшие:</string>
     <string name="input_withdraw_res_no_members">&lt;Нет сошедших></string>
+    <string name="input_withdraw_dialog_title">Оформить сход отмеченным участникам?</string>
+    <string name="input_withdraw_dialog_yes">Да</string>
+    <string name="input_withdraw_dialog_no">Нет</string>
 
     <string name="file_dialog_location">Расположение</string>
     <string name="file_dialog_cant_read_folder">нельзя прочитать директорию!</string>
