--- a/datacollector/datacollector_tablet/app/src/main/res/values/strings.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/values/strings.xml
@@ -82,8 +82,10 @@
     <string name="input_data_no_team">&lt;No team selected></string>
     <string name="input_data_no_team_number">333</string>
     <string name="input_data_edit_date">Edit</string>
-    <string name="input_data_check_all">Check all</string>
+    <string name="input_data_check_all">All</string>
+    <string name="input_data_check_all_OKP">All OKP</string>
     <string name="input_data_check_nothing">Clear</string>
+    <string name="input_data_check_nothing_OKP">Clear OKP</string>
     <string name="input_data_no_result">&lt;Result undefined></string>
     <string name="input_data_ok">OK</string>
     <string name="input_data_res_missed">Missed:</string>
