--- a/SportiduinoManager/app/src/main/res/values-ru/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values-ru/strings.xml
@@ -37,12 +37,13 @@
     <string name="device_connect_description">Нажмите для подключения к станции</string>
     <string name="connected_station">Подключенная станция</string>
     <string name="response_time">Время отклика: %1$dмс</string>
-    <string name="station_mode">Режим</string>
-    <string name="station_mode_0">Инициализация чипов</string>
-    <string name="station_mode_1">Обычный КП</string>
-    <string name="station_mode_2">Финишный КП</string>
+    <string name="station_mode">Текущий режим</string>
+    <string name="station_mode_0">Инициализация чипов на точке #%1$d</string>
+    <string name="station_mode_1">Обычный КП #%1$d</string>
+    <string name="station_mode_2">Финишный КП #%1$d</string>
     <string name="station_mode_unknown">Неизвестный режим</string>
-    <string name="station_number">Номер точки: #%1$d</string>
+    <string name="station_new_mode">Новый режим</string>
+    <string name="station_change_mode">Сохранить</string>
     <string name="station_time_drift">Смещение часов: %1$dс</string>
     <string name="station_sync_time">Синхронизировать</string>
     <string name="station_chips_registered">Отметок</string>
