--- a/SportiduinoManager/app/src/main/res/values/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values/strings.xml
@@ -37,12 +37,13 @@
     <string name="device_connect_description">Press to connect to the device</string>
     <string name="connected_station">Connected station</string>
     <string name="response_time">Response time: %1$dms</string>
-    <string name="station_mode">Mode</string>
-    <string name="station_mode_0">Initialization</string>
-    <string name="station_mode_1">Ordinary point</string>
-    <string name="station_mode_2">Finish point</string>
+    <string name="station_mode">Current mode</string>
+    <string name="station_mode_0">Initialization at #%1$d</string>
+    <string name="station_mode_1">Ordinary point #%1$d</string>
+    <string name="station_mode_2">Finish point #%1$d</string>
     <string name="station_mode_unknown">Unknown mode</string>
-    <string name="station_number">Point number: #%1$d</string>
+    <string name="station_new_mode">New mode</string>
+    <string name="station_change_mode">Update</string>
     <string name="station_time_drift">Time drift: %1$ds</string>
     <string name="station_sync_time">Synchronize</string>
     <string name="station_chips_registered">Chips registered</string>
