--- a/SportiduinoManager/app/src/main/res/values-ru/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values-ru/strings.xml
@@ -28,7 +28,7 @@
     <string name="password">Пароль</string>
     <string name="use_test_site">Использовать тестовый сайт</string>
     <string name="download_distance_success">Скачивание данных завершилось успешно</string>
-    <string name="database_distance_version">Дистанция/участники с %s сайта, версия от %s</string>
+    <string name="database_distance_version">Дистанция/участники с %1$s сайта, версия от %2$s</string>
     <string name="site_name_test">тестового</string>
     <string name="site_name_main">основного</string>
 
@@ -48,4 +48,19 @@
     <string name="station_sync_time">Синхронизировать</string>
     <string name="station_chips_registered">Отметок</string>
     <string name="station_last_chip">Последняя отметка</string>
+
+    <string name="team_number_title">Номер команды</string>
+    <string name="key_1">1</string>
+    <string name="key_2">2</string>
+    <string name="key_3">3</string>
+    <string name="key_4">4</string>
+    <string name="key_5">5</string>
+    <string name="key_6">6</string>
+    <string name="key_7">7</string>
+    <string name="key_8">8</string>
+    <string name="key_9">9</string>
+    <string name="key_0">0</string>
+    <string name="key_del">\u232b</string>
+    <string name="key_clear">\u00d7</string>
+    <string name="team_number">-</string>
 </resources>
