--- a/SportiduinoManager/app/src/main/res/values/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 <resources>
     <string name="app_name">Sportiduino Manager</string>
     <string name="navigation_header">Mode of Work</string>
+    <string name="acra_toast_text">Application was stopped due to error, detailed report
+        will be sent to mmb.progressor.ru</string>
 
     <string name="unknown">\?\?\?</string>
 
