SportiduinoManager: ability to upload chip events to site

--- a/SportiduinoManager/app/src/main/res/values-ru/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values-ru/strings.xml
@@ -31,7 +31,12 @@
     <string name="use_test_site">Использовать тестовый сайт</string>
     <string name="download_distance_success">Скачивание данных завершилось успешно</string>
     <string name="send_results_success">Данные с чипов успешно отправлены на сайт</string>
+    <string name="send_results_failure">Появились новые данные, повторите отправку
+        результатов</string>
     <string name="database_distance_version">Дистанция/участники с %1$s сайта, версия от %2$s</string>
+    <string name="database_local_init">Выдано чипов мной: %1$d (%2$d отправлено на сайт)</string>
+    <string name="database_local_results">Зарегистрировано результатов мной: %1$d (%2$d отправлено
+        на сайт)</string>
     <string name="site_name_test">тестового</string>
     <string name="site_name_main">основного</string>
 
