--- a/SportiduinoManager/app/src/main/res/values/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values/strings.xml
@@ -31,7 +31,13 @@
     <string name="use_test_site">Use test site</string>
     <string name="download_distance_success">Distance was successfully downloaded</string>
     <string name="send_results_success">Chip data were successfully sent to site</string>
+    <string name="send_results_failure">Local chips data has been changed, please, resend
+        it</string>
     <string name="database_distance_version">Race/teams from %1$s site, downloaded %2$s</string>
+    <string name="database_local_init">Local chips initialized: %1$d (%2$d of them were
+        uploaded)</string>
+    <string name="database_local_results">Local results registered: %1$d (%2$d of them were
+        uploaded)</string>
     <string name="site_name_test">test</string>
     <string name="site_name_main">main</string>
 
