--- a/SportiduinoManager/app/src/main/res/values/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values/strings.xml
@@ -41,17 +41,22 @@
     <string name="site_name_test">test</string>
     <string name="site_name_main">main</string>
 
+    <string name="bluetooth_activity_title">Station setup</string>
     <string name="device_search">Search for BT devices</string>
     <string name="device_name">%1$s (%2$s)</string>
     <string name="device_connect_description">Press to connect to the device</string>
     <string name="connected_station">Connected station</string>
     <string name="response_time">Response time: %1$dms</string>
     <string name="station_mode">Current mode</string>
-    <string name="station_mode_0">Initialization at #%1$d</string>
-    <string name="station_mode_1">Ordinary point #%1$d</string>
-    <string name="station_mode_2">Finish point #%1$d</string>
+    <string name="station_mode_value_0">Initialization at #%1$d</string>
+    <string name="station_mode_value_1">Ordinary point #%1$d</string>
+    <string name="station_mode_value_2">Finish point #%1$d</string>
     <string name="station_mode_unknown">Unknown mode</string>
+    <string name="station_new_point">New point</string>
     <string name="station_new_mode">New mode</string>
+    <string name="station_mode_0">Init</string>
+    <string name="station_mode_1">Ordinary</string>
+    <string name="station_mode_2">Finish</string>
     <string name="station_change_mode">Update</string>
     <string name="station_time_drift">Time drift: %1$ds</string>
     <string name="station_sync_time">Synchronize</string>
