--- a/SportiduinoManager/app/src/main/res/values/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values/strings.xml
@@ -52,9 +52,9 @@
     <string name="connected_station">Connected station</string>
     <string name="response_time">Response time: %1$dms</string>
     <string name="station_mode">Current mode</string>
-    <string name="station_mode_value_0">Initialization at #%1$d</string>
-    <string name="station_mode_value_1">Ordinary point #%1$d</string>
-    <string name="station_mode_value_2">Finish point #%1$d</string>
+    <string name="station_mode_value_0">Initialization at #%1$s</string>
+    <string name="station_mode_value_1">Ordinary point #%1$s</string>
+    <string name="station_mode_value_2">Finish point #%1$s</string>
     <string name="station_mode_unknown">Unknown mode</string>
     <string name="station_new_point">New point</string>
     <string name="station_new_mode">New mode</string>
