--- a/SportiduinoManager/app/src/main/res/values/strings.xml
+++ b/SportiduinoManager/app/src/main/res/values/strings.xml
@@ -80,4 +80,8 @@
     <string name="team_maps_count">Maps: %1$d</string>
     <string name="team_members_count">Members: %1$d (%2$s)</string>
     <string name="init_team_chip">Init chip</string>
+
+    <string name="ap_total_teams">Teams: %1$d</string>
+    <string name="ap_team_name">№%1$d %2$s</string>
+    <string name="ap_members_count">Members: %1$d</string>
 </resources>
